# AIEmail

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_handoff_source_email_id.py  0003_gmail_history_sync.py  0004_mailbox_rate_guards.py  0005_ready_stock_pricing.py  0006_automated_replies.py  0007_email_deliverability.py  0008_human_review_outbox.py  0009_history_contact_links.py  0010_weekly_commercial_data.py  (+2 more)
app/: __init__.py  ai.py  api.py  auto_replies.py  bounces.py  commercial.py  commercial_update.html  dashboard.html  db.py  deliverability.py  domain.py  handoff_review.html  history.py  imap_poller.py  imports.py  integrations.py  mail.py  main.py  products.py  reactivation.html  reactivation.py  recovery.py  services.py  settings.py  worker.py
assets/: demo_counteroffer.eml  demo_sample_request.eml
config/: product_aliases.yaml
scripts/: bootstrap.ps1  demo.ps1  import_contact_activity.py  recover_false_counteroffer.py  send_test_reply.py  verify.ps1
tests/: conftest.py  test_ai_and_demo_flow.py  test_api.py  test_auto_replies.py  test_bounces.py  test_commercial.py  test_contact_activity_import.py  test_deliverability.py  test_imap_poller.py  test_imports.py  test_inline_reply_history.py  test_integrations.py  test_mail.py  test_main.py  test_pricing_state_policy.py  test_products.py  test_rate_limits.py  test_reactivation.py  test_services_integration.py  test_settings.py  test_weekly_commercial_integration.py
(+10 files in other folders)
